--- a/NAQLAH.Server/appsettings.json
+++ b/NAQLAH.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db23363.databaseasp.net; Database=db23363; User Id=db23363; Password=3Br_N#5g2Pj+; Encrypt=False; MultipleActiveResultSets=True;"
+  }
 }
