--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\DeliveryManSection\Regestration\Dtos\" />
+    <Folder Include="Features\DeliveryManSection\Regestration\Validators\" />
+  </ItemGroup>
+
 </Project>
