--- a/NAQLAH.Server/appsettings.Development.json
+++ b/NAQLAH.Server/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "apiBaseUrl": "https://localhost:7119",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Naqlah;Integrated Security=True;TrustServerCertificate=true;"
   }
