compay and renter

--- a/NAQLAH.Server/appsettings.json
+++ b/NAQLAH.Server/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "apiBaseUrl": "http://naqlah.runasp.net",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=db23363.databaseasp.net; Database=db23363; User Id=db23363; Password=3Br_N#5g2Pj+; Encrypt=False; MultipleActiveResultSets=True;"
