--- a/NAQLAH.Server/NAQLAH.Server.csproj
+++ b/NAQLAH.Server/NAQLAH.Server.csproj
@@ -35,6 +35,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <Target Name="NSwag" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
+    <Exec WorkingDirectory="$(ProjectDir)" EnvironmentVariables="ASPNETCORE_ENVIRONMENT=Development" Command="$(NSwagExe_Net80) run nswag.json /variables:Configuration=$(Configuration)" />
+  </Target>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
