--- a/naqlah.client/angular.json
+++ b/naqlah.client/angular.json
@@ -36,7 +36,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/aos/dist/aos.css"
+              "node_modules/aos/dist/aos.css",
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
               "node_modules/aos/dist/aos.js"
@@ -102,7 +103,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/aos/dist/aos.css"
+              "node_modules/aos/dist/aos.css",
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
               "node_modules/aos/dist/aos.js"
