--- a/naqlah.client/package.json
+++ b/naqlah.client/package.json
@@ -21,16 +21,22 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.21",
+    "chart.js": "^3.9.1",
+    "chartjs-chart-geo": "^4.3.4",
     "jest-editor-support": "*",
+    "leaflet": "^1.9.4",
+    "ng2-charts": "^4.0.1",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
     "run-script-os": "*",
     "rxjs": "^7.8.1",
     "tailwindcss": "^3.3.0",
+    "topojson": "^3.0.2",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.3"
   },
