--- a/naqlah.client/package.json
+++ b/naqlah.client/package.json
@@ -21,7 +21,6 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "aos": "^2.3.4",
@@ -45,6 +44,7 @@
     "@angular/cli": "^18.2.20",
     "@angular/compiler-cli": "^18.2.13",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
