--- a/NAQLAH.Server/NAQLAH.Server.csproj
+++ b/NAQLAH.Server/NAQLAH.Server.csproj
@@ -35,9 +35,9 @@
     </PackageReference>
   </ItemGroup>
 
-  <Target Name="NSwag" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
+  <!--<Target Name="NSwag" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
     <Exec WorkingDirectory="$(ProjectDir)" EnvironmentVariables="ASPNETCORE_ENVIRONMENT=Development" Command="$(NSwagExe_Net80) run nswag.json /variables:Configuration=$(Configuration)" />
-  </Target>
+  </Target>-->
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
