--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -13,5 +13,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ValueObject\" />
+  </ItemGroup>
+
 
 </Project>
