--- a/NAQLAH.Server/appsettings.Development.json
+++ b/NAQLAH.Server/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "apiBaseUrl": "https://localhost:7119",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Naqlah;Integrated Security=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=.;Database=Naqlah;Integrated Security=True;TrustServerCertificate=true;"
   }
 }
