--- a/naqlah.client/package.json
+++ b/naqlah.client/package.json
@@ -34,6 +34,8 @@
     "postcss": "^8.5.6",
     "run-script-os": "*",
     "rxjs": "^7.8.1",
+    "subsink": "^1.0.2",
+    "sweetalert2": "^11.23.0",
     "tailwindcss": "^3.3.0",
     "topojson": "^3.0.2",
     "tslib": "^2.6.2",
