--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\AdminSection\OrderFeature\Commands\" />
     <Folder Include="Features\CustomerSection\Feature\Regestration\Queries\" />
     <Folder Include="Features\DeliveryManSection\CurrentDeliveryMen\Dtos\" />
     <Folder Include="Features\DeliveryManSection\Regestration\Validators\" />
