--- a/naqlah.client/tsconfig.app.json
+++ b/naqlah.client/tsconfig.app.json
@@ -4,9 +4,13 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": ["src/main.ts"],
-  "include": ["src/**/*.d.ts"],
+  "files": [
+    "src/main.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ],
   "angularCompilerOptions": {
-    "strictTemplates": true
+    "strictTemplates": false
   }
 }
