--- a/NAQLAH.Server/appsettings.json
+++ b/NAQLAH.Server/appsettings.json
@@ -8,6 +8,6 @@
   "apiBaseUrl": "http://naqlah.runasp.net",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db23363.databaseasp.net; Database=db23363; User Id=db23363; Password=3Br_N#5g2Pj+; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db36127.databaseasp.net; Database=db36127; User Id=db36127; Password=2Pp?Xm-5=Z8e; Encrypt=False; MultipleActiveResultSets=True;"
   }
 }
