--- a/NAQLAH.Server/appsettings.json
+++ b/NAQLAH.Server/appsettings.json
@@ -8,6 +8,7 @@
   "apiBaseUrl": "http://naqlah.runasp.net",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db36127.databaseasp.net; Database=db36127; User Id=db36127; Password=2Pp?Xm-5=Z8e; Encrypt=False; MultipleActiveResultSets=True;"
-  }
+    "DefaultConnection": "Server=db36127.public.databaseasp.net; Database=db36127; User Id=db36127; Password=2Pp?Xm-5=Z8e; Encrypt=True; TrustServerCertificate=True;"
+  },
+  "GoogleApiKey": "Test"
 }
