--- a/NAQLAH.Server/appsettings.Development.json
+++ b/NAQLAH.Server/appsettings.Development.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=db36127.public.databaseasp.net; Database=db36127; User Id=db36127; Password=2Pp?Xm-5=Z8e; Encrypt=True; TrustServerCertificate=True;"
   },
-  "GoogleApiKey": "Test"
+  "GoogleApiKey": "AIzaSyBChPhzcbgAfkc2Kij4oALt1dTcahP80qE"
 }
