--- a/naqlah.client/package.json
+++ b/naqlah.client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
+    "@angular/cdk": "^18.2.13",
     "@microsoft/signalr": "^10.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
