handle suggestions and complains

--- a/NAQLAH.Server/appsettings.Development.json
+++ b/NAQLAH.Server/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "apiBaseUrl": "https://localhost:7119",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Naqlah;Integrated Security=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=db36127.public.databaseasp.net; Database=db36127; User Id=db36127; Password=2Pp?Xm-5=Z8e; Encrypt=True; TrustServerCertificate=True;"
   },
   "GoogleApiKey": "AIzaSyBChPhzcbgAfkc2Kij4oALt1dTcahP80qE"
 }
